--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,8 @@ PS: Make sure you change ALL of the listed CSS properties.
 body {
   background-color: red;
   color: yellow;
-  font-size: 60px;
+  font-size: 45px;
   font-weight: bold;
-  text-align: right;
-  margin-top: 19px;
+  text-align: center;
+  margin-top: 30px;
 }
