--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,13 @@
 /* 
 Challenge:
-Select the img tag and set the width
-of the Google logo to be 300px.
+Turn the elements into blocks
 */
 
 input {
   width: 400px;
+}
+
+img {
+  border: 4px solid red;
+  width: 300px;
 }
