--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,16 @@
-/* 
-Challenge:
-Turn the elements into blocks
-*/
-
 input {
+  display: block;
   width: 400px;
 }
 
 img {
+  /* Challenge:
+  Add some space margin above our image!
+  Do you rembember how we added spacing in the
+  cookie widget example?
+   */
+  margin-top: 100px;
+  display: block;
   border: 4px solid red;
   width: 300px;
 }
