--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,15 @@
+div {
+  margin-top: 100px;
+}
+
 input {
   display: block;
   width: 400px;
 }
 
+/*  Challenge - part 2:
+Replace the element selectors with class selectors */
 img {
-  /* Challenge:
-  Add some space margin above our image!
-  Do you rembember how we added spacing in the
-  cookie widget example?
-   */
-  margin-top: 100px;
   display: block;
   border: 4px solid red;
   width: 300px;
