--- a/styles.css
+++ b/styles.css
@@ -2,14 +2,14 @@ div {
   margin-top: 100px;
 }
 
-input {
+.search-input {
   display: block;
   width: 400px;
 }
 
 /*  Challenge - part 2:
 Replace the element selectors with class selectors */
-img {
+.logo-img {
   display: block;
   border: 4px solid red;
   width: 300px;
