--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,21 @@
-div {
-  margin-top: 100px;
+body {
+  margin: 0;
 }
 
-.search-input {
-  display: block;
-  width: 400px;
+.red {
+  background: #c71226;
+  height: 100px;
+  /* Challenge:
+  Add 100px of margin on the bottom of the red box. */
+  margin-bottom: 100px;
 }
 
-/*  Challenge - part 2:
-Replace the element selectors with class selectors */
-.logo-img {
-  display: block;
-  border: 4px solid red;
-  width: 300px;
+.blue {
+  background: #0d1b88;
+  height: 100px;
+}
+
+.green {
+  background: #397327;
+  height: 100px;
 }
